--- a/css/style.css
+++ b/css/style.css
@@ -178,9 +178,15 @@ a {
       margin-right: 0; }
   .header_content {
     margin-top: 11rem; }
+    @media only screen and (max-width: 1024px) {
+      .header_content {
+        margin-top: 22rem; } }
     @media only screen and (max-width: 600px) {
       .header_content {
         text-align: center; } }
+    @media only screen and (max-width: 320px) {
+      .header_content {
+        margin-top: 16rem; } }
   .header_heading-secondary {
     font-size: 2rem;
     color: #B64926;
