--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -82,7 +82,7 @@
         
     }
     
-    &_navigation-hidden {
+    &_navigation-hidden { 
         position: absolute;
         top: 0;
         left: 50%;
@@ -139,8 +139,16 @@
     &_content {
         margin-top: 11rem;
         
+        @media only screen and (max-width: 1024px) {
+            margin-top: 22rem;
+        }
+        
         @media only screen and (max-width: 600px) {
             text-align: center;
+        }
+        
+        @media only screen and (max-width: 320px) {
+            margin-top: 16rem;
         }
     }
 
