--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ a {
   color: #8E2800;
   text-align: center;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-  padding: 0 2rem;
   margin-bottom: 4rem; }
 
 .header {
@@ -335,6 +334,9 @@ a {
     @media only screen and (max-width: 480px) {
       .reviews_heading {
         font-size: 7.25rem; } }
+    @media only screen and (max-width: 430px) {
+      .reviews_heading {
+        width: 26rem; } }
   .reviews_boxes {
     display: inline-flex;
     width: 100%;
