--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 100vh;
+    min-height: 100vh;
     background-image: linear-gradient(rgba(#000, .5), rgba(#000, .5)), url(../img/bg-coffee2.jpg);
     background-size: cover;
     background-position: center;
