--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -42,7 +42,6 @@
         display: inline-flex;
         flex-direction: column;
         width: 60rem;
-        height: 100%;
         justify-content: center;
         overflow: hidden;
         
@@ -52,7 +51,9 @@
     }
     
     &_product-image {
-        height: 100%;
+        height: 42rem;
+        object-fit: cover;
+        object-position: center;
         z-index: 1;
     }
     
