--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ a {
     left: 50%;
     display: flex;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: #8E2800;
     text-align: center;
     flex-direction: column;
@@ -179,7 +179,7 @@ a {
     margin-top: 11rem; }
     @media only screen and (max-width: 1024px) {
       .header_content {
-        margin-top: 22rem; } }
+        margin-top: 16rem; } }
     @media only screen and (max-width: 600px) {
       .header_content {
         text-align: center; } }
