--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -87,7 +87,7 @@
         left: 50%;
         display: flex;
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
         background: $color-primary;
         text-align: center;
         flex-direction: column;
@@ -139,7 +139,7 @@
         margin-top: 11rem;
         
         @media only screen and (max-width: 1024px) {
-            margin-top: 22rem;
+            margin-top: 16rem;
         }
         
         @media only screen and (max-width: 600px) {
